/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2014-12-13
Bug fix of function data for FortranBinary in class convOutput_PLOT3D
FCONVのM対1データ変換において、FortranBinary形式でplot3dデータの
フィールドデータを出力する際、出力するデータのバイト数の書き込み位置
(メソッドWriteDataMarkerの位置)を修正した。
また、出力する変数が３に固定されていた部分があったので修正した。

------------------
2014-12-12
Edit class convOutput_PLOT3D to output plot3d data for dual cells
FCONVのM対1データ変換において、plot3d形式のデータを格子点補間せずに
双対セルとして扱って出力するため、格子ファイル出力時の格子数を修正した。

------------------
2014-12-12
Comment out method WriteNgrid in plot3d format in FCONV
FCONVのM対1データ変換において、plot3d形式でデータ出力する際、シングルグリッドで
出力するため、グリッド数を記述するメソッドWriteNgridをコメントアウトした。

------------------
2014-12-11
Bug fix in method write_ascii_header of class cdm_DFI_BOV and correct typo
クラスcdm_DFI_BOVのメソッドwrite_ascii_header内の誤植
・DATA_COMPONENT >> DATA_COMPONENTS
・BRICK_ORIGN >> BRICK_ORIGIN
を修正した。Orign >> Originの誤植が他の所にもあったので訂正した。

------------------
2014-12-11
Minor modification in method WriteGridFile
メソッドWriteGridFile内のprint文に修正を加えた。

------------------
2014-12-11
Remove parameter OutputArrayShape from input file for FCONV
FCONVの入力ファイルから
・出力配列形状を指定するパラメータ:OutputArrayShape
を削除した。BOV形式の配列形状をijknで固定したため。

------------------
2014-12-11
Add parameters OutputFileTypeCoord and OutputInterpolation in input file for FCONV
FCONVの入力ファイルに、AVSおよびVTK形式で
・座標データの出力形式を指定するパラメータ:OutputFileTypeCoord
・節点への補間オプションを指示するパラメータ:OutputInterpolation
を追加し、パラメータの読込み部やログ出力部等を編集した。
ただ、AVSおよびVTK形式でデータ出力する部分との接続はまだ行っていない。

------------------
2014-12-10
Replace FormatType with FileType in FCONV
FCONV内の変数名やメソッド名に含まれるFormatTypeをFileTypeに置き換えた。

------------------
2014-12-10
Edit class convMxM to convert plot3d non-uniform cartesian data
FCONVのM対Mデータ変換機能において、plot3d形式の不等間隔格子データも変換
できるようにした。現時点では、不等間隔格子で出力できるのはplot3d形式だけ。
また、クラスconvMxN内も一部編集した。

------------------
2014-12-08