@@ -54,7 +54,7 @@ public:
     DFI_MPI        = mpi;
     DFI_TimeSlice  = TSlice;
     DFI_Process    = process;
-    m_bgrid_interp_flag = true;
+    m_bgrid_interp_flag = false;
   };
   
   /**　デストラクタ */
